[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/NativeLib/package_info.gd" type="Script" id=1]
[ext_resource path="res://addons/NativeLib/icons/android.svg" type="Texture" id=2]
[ext_resource path="res://addons/NativeLib/icons/apple_logo.svg" type="Texture" id=3]

[node name="plugin_info" type="HBoxContainer"]
margin_right = 720.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="PanelContainer" parent="."]
margin_right = 165.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="box" type="VBoxContainer" parent="info"]
margin_left = 7.0
margin_top = 7.0
margin_right = 158.0
margin_bottom = 93.0

[node name="name" type="Label" parent="info/box"]
margin_right = 151.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Plugin Name"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version" type="Label" parent="info/box"]
margin_top = 30.0
margin_right = 151.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Latest: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="box" type="HBoxContainer" parent="info/box"]
margin_top = 60.0
margin_right = 151.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="installed" type="Label" parent="info/box/box"]
margin_right = 113.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Installed:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="android" type="TextureRect" parent="info/box/box"]
margin_left = 117.0
margin_right = 132.0
margin_bottom = 26.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="ios" type="TextureRect" parent="info/box/box"]
margin_left = 136.0
margin_right = 151.0
margin_bottom = 26.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="bar" type="VBoxContainer" parent="."]
margin_left = 169.0
margin_right = 720.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="description" type="Label" parent="bar"]
margin_right = 551.0
margin_bottom = 66.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Module Name"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="controls" type="HBoxContainer" parent="bar"]
margin_top = 70.0
margin_right = 551.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
alignment = 2

[node name="InstallButton" type="Button" parent="bar/controls"]
margin_left = 364.0
margin_right = 416.0
margin_bottom = 30.0
text = "Install"

[node name="UninstallButton" type="Button" parent="bar/controls"]
margin_left = 420.0
margin_right = 489.0
margin_bottom = 30.0
text = "Uninstall"

[node name="UpdateButton" type="Button" parent="bar/controls"]
margin_left = 493.0
margin_right = 551.0
margin_bottom = 30.0
text = "Update"
[connection signal="pressed" from="bar/controls/InstallButton" to="." method="_on_InstallButton_pressed"]
[connection signal="pressed" from="bar/controls/UninstallButton" to="." method="_on_UninstallButton_pressed"]
[connection signal="pressed" from="bar/controls/UpdateButton" to="." method="_on_UpdateButton_pressed"]
